DevTools: Use new page-wide API for ignoring input

The new API for ignoring input is on the WebContents. Given
that the exposed devtools protocol says that it disables
input events on the page, use the new API.

This removes the last user of the widget-level ignore flag
so it removes the flag as well.

BUG=863582

Change-Id: I2602f1c1d86bd4d73e7877e708d0eb201048ff2d
Reviewed-on: https://chromium-review.googlesource.com/1195833
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587558}