content/browser/renderer_host/render_widget_host_unittest.cc
@@ -525,6 +525,7 @@ class MockRenderWidgetHostDelegate : public RenderWidgetHostDelegate {
         handle_wheel_event_(false),
         handle_wheel_event_called_(false),
         unresponsive_timer_fired_(false),
+        ignore_input_events_(false),
         render_view_host_delegate_view_(new MockRenderViewHostDelegateView()) {}
   ~MockRenderWidgetHostDelegate() override {}
 
@@ -583,6 +584,10 @@ class MockRenderWidgetHostDelegate : public RenderWidgetHostDelegate {
     return mock_delegate_view();
   }
 
+  void SetIgnoreInputEvents(bool ignore_input_events) {
+    ignore_input_events_ = ignore_input_events;
+  }
+
  protected:
   KeyboardEventProcessingResult PreHandleKeyboardEvent(
       const NativeWebKeyboardEvent& event) override {
@@ -611,6 +616,8 @@ class MockRenderWidgetHostDelegate : public RenderWidgetHostDelegate {
     unresponsive_timer_fired_ = true;
   }
 
+  bool ShouldIgnoreInputEvents() override { return ignore_input_events_; }
+
   void ExecuteEditCommand(
       const std::string& command,
       const base::Optional<base::string16>& value) override {}
@@ -633,6 +640,8 @@ class MockRenderWidgetHostDelegate : public RenderWidgetHostDelegate {
   bool handle_wheel_event_called_;
 
   bool unresponsive_timer_fired_;
+
+  bool ignore_input_events_;
 
   std::unique_ptr<MockRenderViewHostDelegateView>
       render_view_host_delegate_view_;
@@ -1695,7 +1704,7 @@ TEST_F(RenderWidgetHostTest, SwapCompositorFrameWithBadSourceId) {
 TEST_F(RenderWidgetHostTest, IgnoreInputEvent) {
   host_->SetupForInputRouterTest();
 
-  host_->SetIgnoreInputEvents(true);
+  delegate_->SetIgnoreInputEvents(true);
 
   SimulateKeyboardEvent(WebInputEvent::kRawKeyDown);
   EXPECT_FALSE(host_->mock_input_router()->sent_keyboard_event_);
